# deep_learning_c-

./: .gitignore  LICENSE  Readme.md
chapter3/: CMakeLists.txt  Readme.md
chapter3/exercicies/: CMakeLists.txt
chapter3/exercicies/benchmark/: middle.cpp
chapter3/exercicies/headers/: activation_functions.hpp  utils.hpp
chapter3/exercicies/src/: activation_funtions.cpp  utils.cpp
chapter3/exercicies/tests/: act_func.cpp  middle.cpp
chapter3/headers/: chi_squared_test.hpp  myfunctions.hpp
chapter3/src/: chi_squared_test.cpp  myfunctions.cpp
chapter3/tests/: test_sorting.cpp
